--- a/paginas/blog.html
+++ b/paginas/blog.html
@@ -27,8 +27,8 @@
         </nav>
     </header>
 
-    <main>
-        <section class="project-page blog-page">
+    <main class="blog-page">
+        <section class="project-page">
             <div class="p-page-content">
                 <h1>Explora el mundo del diseño y la tecnología</h1>
                 <p>Descubre artículos informativos y inspiradores sobre tecnología, diseño digital y creatividad. Mantente al día con las últimas tendencias y consejos prácticos para impulsar tu proyecto digital hacia el éxito.</p>
@@ -38,7 +38,7 @@
             </div>
         </section>
 
-        <section class="first-blog parallax-text blog-parallax" id="p-blog">
+        <section class="first-blog parallax-text" id="p-blog">
             <div class="overlay">
                 <h2>¿Cómo mejorar la experiencia del usuario en tu sitio web?</h2>
                 <p>Descubre estrategias prácticas y efectivas para optimizar la experiencia del usuario en tu sitio web, desde la navegación hasta el diseño de interfaz.</p>
@@ -48,7 +48,7 @@
             </div>
         </section>
 
-        <section class="second-blog parallax-text blog-parallax">
+        <section class="second-blog parallax-text">
             <div class="overlay">
                 <h2>Introducción a la realidad aumentada en aplicaciones móviles</h2>
                 <p>Aprende cómo la realidad aumentada está cambiando la forma en que interactuamos con las aplicaciones móviles, proporcionando experiencias más inmersivas y personalizadas.</p>
@@ -58,7 +58,7 @@
             </div>
         </section>
 
-        <section class="third-blog parallax-text blog-parallax">
+        <section class="third-blog parallax-text">
             <div class="overlay">
                 <h2>Impacto de la inteligencia artificial en el marketing digital</h2>
                 <p>Descubre cómo la inteligencia artificial está transformando el marketing digital, desde la personalización de contenidos hasta la automatización de campañas.</p>
@@ -68,7 +68,7 @@
             </div>
         </section>
 
-        <section class="fourth-blog parallax-text blog-parallax">    
+        <section class="fourth-blog parallax-text">    
             <div class="overlay">
                 <h2>El futuro del eCommerce: Tendencias y tecnologías disruptivas</h2>
                 <p>Analiza las tendencias emergentes y las tecnologías disruptivas que están modelando el futuro del comercio electrónico y cómo puedes adaptarte para aprovecharlas.</p>
@@ -78,7 +78,7 @@
             </div>
         </section>
         
-        <section class="fifth-blog parallax-text blog-parallax">
+        <section class="fifth-blog parallax-text">
             <div class="overlay">
                 <h2>Diseño audiovisual: Integrando sonido y video en experiencias digitales</h2>
                 <p>Explora cómo integrar de manera efectiva elementos audiovisuales en tus proyectos digitales para crear experiencias más inmersivas y atractivas para los usuarios.</p>
