--- a/paginas/blog.html
+++ b/paginas/blog.html
@@ -17,8 +17,8 @@
                 <li><a href="/index.html">inicio</a></li>
                 <li><a href="./servicios.html">Servicios</a></li>
                 <li><a href="./proyectos.html">Proyectos</a></li>
-                <li><a href="./acerca-de.html">Acerca de</a></li>
-                <li><a href="./blog.html">Blog</a></li>
+                <li><a href="../paginas/acerca-de.html">Acerca de</a></li>
+                <li><a href="../paginas/blog.html">Blog</a></li>
             </ul>
             <div class="btn-black">
                 <a href="./contacto.html">Contacto</a>
